--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,5 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "accelerate>=1.5.2",
     "torch>=2.6.0",
+    "torchaudio>=2.6.0",
+    "torchvision>=0.21.0",
     "transformers>=4.50.1",
 ]
